# tiliqua

./: .git-blame-ignore-revs  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md
.scratch/mbsid-drum-sigsegv/: issue.md
.scratch/mbsid-ui-patch-details/: issue.md
.scratch/mbsid-usb-hotplug-redetect-broken/: issue.md
docs/: 8_Bits_and_Pieces.sid  My_Day_on_the_Highway_NTSC.sid  SID_PLAYER.md  SID_PLAYER_ALTERNATIVES.md  mbsid_multi_wt_filter.md  sid_player_sw_dropped_notes_and_riscv_rebuild.md  sid_player_sw_host_render_spec.md
docs/superpowers/plans/: 2026-06-03-sid-voice-scope.md  2026-06-12-sid-phi2-runtime-select.md  2026-06-15-remove-paced-replay-anchor.md  2026-06-18-cv-modulation.md
docs/superpowers/specs/: 2026-06-03-sid-player-design.md  2026-06-03-sid-voice-scope-design.md  2026-06-12-sid-phi2-runtime-select-design.md  2026-06-15-fir-mac-pipeline-design.md  2026-06-15-pal-ntsc-build-time-design.md  2026-06-15-remove-paced-replay-anchor-design.md  2026-06-15-sid-recent-changes-cost-benefit-findings.md  2026-06-18-cv-modulation-design.md
gateware/: pdm-flash-latest  pyproject.toml
gateware/docs/: calibration.rst  index.rst  usb_troubleshooting.rst
gateware/docs/quickstart/: tlq_module.rst
gateware/scripts/: mbsid-export-userbank.py
gateware/src/rs/hal/src/: polysynth.rs  scope.rs  tusb322.rs
gateware/src/rs/template/pac/src/: macros.rs
gateware/src/tiliqua/: pll.py  tiliqua_soc.py  usb_msc_csr.py
gateware/src/tiliqua/dsp/: filters.py
gateware/src/tiliqua/midi/: decode_serial.py  decode_usb.py  misc.py
gateware/src/tiliqua/raster/: persist.py
gateware/src/tiliqua/test/: psram.py
gateware/src/top/mbsid/: .gitignore  CLAUDE.md  DESIGN.md  M2_DUAL_SID.md  M3_PATCH_BANKS.md  M3_PATCH_BANKS_PLAN.md  M4_USER_PATCH_BANKS.md  M5_MENU_CARDS_CV_MOD.md  M5_MENU_CARDS_CV_MOD_PLAN.md  M5_SYSEX_UPLOAD.md  M6_USB_STORAGE.md  M6_USB_STORAGE_PLAN.md  README.md  fetch-mios32.sh  make_patch_bank.py  top.py
gateware/src/top/mbsid/docs/: README.md  architecture.md  cv-knob-defaults-design.md  developer-guide.md  extending.md  limitations.md  user-guide.md
gateware/src/top/mbsid/docs/superpowers/plans/: 2026-07-15-usb-read-path-diagnostics.md  2026-07-23-mbsid-patch-bank-tool-relocation.md  2026-07-23-syx-directory-to-patch-bank.md
gateware/src/top/mbsid/docs/superpowers/specs/: 2026-07-23-mbsid-patch-bank-tool-relocation-design.md  2026-07-23-syx-directory-to-patch-bank-design.md
gateware/src/top/mbsid/fw/: Cargo.toml  build.rs  init_array.x
gateware/src/top/mbsid/fw/csrc/: cxx_runtime.c  mbsid_multi_wt.h  mbsid_shim.cpp  mbsid_shim.h  vendor_sources.txt
gateware/src/top/mbsid/fw/csrc/mios32_shim/: jsw_rand.h  mios32.h  notestack.h  string.h  time.h
gateware/src/top/mbsid/fw/src/: bank_import.rs  cv.rs  diag.rs  fat.rs  frame.rs  lib.rs  main.rs  mbsid_sys.rs  menu.rs  params.rs  partition.rs  patch.rs  patch_store.rs  regdiff.rs  settings_store.rs  status.rs  sysex_capture.rs  uptime.rs  usb_msc.rs  usb_patch.rs
gateware/src/top/mbsid/host_oracle/: .gitignore  host_stubs.cpp  oracle.cpp  param_check.cpp  run_oracle.sh  seq.h  shim_driver.cpp  sweep_driver.cpp
gateware/src/top/mbsid/host_oracle/hostinc/: mios32.h
gateware/src/top/mbsid/host_oracle/sequences/: seq_basic.txt  seq_bassline.txt  seq_chord_bend.txt  seq_drum.txt  seq_lead_basic.txt  seq_lead_chord_bend.txt  seq_lead_knobs.txt  seq_multi.txt
gateware/src/top/mbsid/tests/: test_make_patch_bank.py
gateware/src/top/mbsid/tools/make_patch_bank/: make_patch_bank.py
gateware/src/top/mbsid/tools/make_patch_bank/tests/: test_make_patch_bank.py
gateware/src/top/polysyn/: top.py
gateware/src/top/polysyn/fw/src/: main.rs  options.rs
gateware/src/top/sid/: README.md  audio.py  top.py
gateware/src/top/sid/fw/: Cargo.toml
gateware/src/top/sid/fw/src/: main.rs  options.rs
gateware/src/top/sid_player/: .gitignore  CLAUDE.md  top.py
gateware/src/top/sid_player/fw/: Cargo.toml  memory.x
gateware/src/top/sid_player/fw/src/: fat.rs  lib.rs  main.rs  psid.rs  sid_scan.rs
gateware/src/top/sid_player/pac/: device.x
gateware/src/top/sid_player/pac/src/: constants.rs  generated.rs  lib.rs
gateware/src/top/sid_player/tools/: measure_cache.py  sid_analyze.py
gateware/src/top/sid_player_sw/: .gitignore  CLAUDE.md  README.md  smooth.py  top.py  upsample.py
gateware/src/top/sid_player_sw/fw/: Cargo.toml  cracktro_vblank.sid
gateware/src/top/sid_player_sw/fw/src/: bootstrap.rs  cvmod.rs  fat.rs  lib.rs  main.rs  player.rs  psid.rs  usb_msc.rs
gateware/src/top/sid_player_sw/tools/: README.md  burst160_vblank.sid  burst24_vblank.sid  gen_stress_sid.py  note_peaks.py  persist_freeze_preview.py  wav_compare.py  wav_onsets.py
gateware/src/top/sid_player_sw/tools/host_render/: README.md  harness.patch  raw2wav.py  render.sh
gateware/tests/: test_cpu6502_bridge.py  test_cpu6502_cosim.py  test_dsp.py  test_guh_msc_write.py  test_guh_msc_write_fullloop.py  test_guh_sie_tx_packets.py  test_midi.py  test_play_timer.py  test_raster.py  test_sid_audio.py  test_sid_cdc.py  test_sid_periph.py  test_sid_periph_cdc.py  test_sid_phi2.py  test_sid_player_tune.py  test_sid_smooth.py  test_sid_upsample.py  test_usb_msc_csr.py  test_usb_msc_integration.py  test_usb_msc_periph.py  test_usb_msc_sw_periph.py
