[package]
name = "tiliqua-fw"
version = "0.1.0"
edition = "2021"

[dependencies]
tiliqua-hal = { path="../../../rs/hal", default-features = false }
tiliqua-lib = { path = "../../../rs/lib" }
opts = { path = "../../../rs/opts" }
tiliqua-pac = { path="../pac", default-features = false, features = ["critical-section", "vexriscv"] }

log = "0.4.17"
embedded-hal = "=1.0.0"
riscv = { version = "=0.11.1", features = ["critical-section-single-hart"] }
riscv-rt = { version = "=0.12.2", features = ["single-hart"] }
panic-halt = "0.2.0"
micromath = "2.1.0"
fastrand = { version = "2.1.0", default-features = false }
heapless = "0.8.0"
strum_macros = "0.26.4"
strum = {version = "0.25.0", features = ["derive"], default-features=false}
colorsys = { version = "*", default-features = false }
critical-section = "1.2.0"
amaranth-soc-isr = { path="../../../rs/isr", default-features = false }
irq = "0.2.3"
serde = { version="1.0.219", default-features=false }
serde_derive = "1.0.219"
midi-types = "0.1.7"
midi-convert = "0.2.0"
fatfs = { git = "https://github.com/rafalh/rust-fatfs", default-features = false }

# Cross-compiles the vendored MBSID C++ engine into libmbsid.a (Task 4).
[build-dependencies]
cc = "1.0"

# Host-test scaffold (cargo test --target x86_64-unknown-linux-gnu --lib):
# regdiff + mbsid_sys live in the lib crate; main.rs is the riscv32 firmware.
[lib]
name = "tiliqua_fw"
path = "src/lib.rs"

[dev-dependencies]
# Host tests only: provides the critical-section implementation the uptime
# counter needs on x86 (the riscv crate's impl is riscv-gated).
critical-section = { version = "1.2.0", features = ["std"] }

[profile.release]
codegen-units = 1
debug = true
debug-assertions = false
incremental = false
lto = true
opt-level = 2
overflow-checks = false
