[package]
name = "tiliqua-fw"
version = "0.1.0"
edition = "2021"

# Clippy is advisory, not blocking: five warnings are deliberately
# `#[allow]`ed at their call sites with a pointer to the refactor that
# removes them. Do NOT raise this to "deny" until those are gone.
[lints.clippy]
all = "warn"

# Bring-up diagnostics. BOTH DEFAULT OFF — they are not part of the
# shipping firmware.
#
# The build driver (gateware/src/tiliqua/tiliqua_soc.py) runs a bare
# `cargo build --release` with no --features flag and is shared by all
# 17 bitstreams, so it must not be modified. To turn a diagnostic on
# for a bring-up session, edit the `default` line below, rebuild with
# `pdm mbsid build --fw-only`, and revert it before committing:
#
#     default = ["usb-diag"]
#
# For a host-only check (`cargo test`/`cargo clippy`) you can instead
# pass `--features usb-diag` directly.
[features]
default = []
# UART0 trace of MSC status transitions, per-stage export progress, and
# the latched first/last read+write failure snapshots. See
# M6_USB_STORAGE.md §7b.
usb-diag = []
# Boot-time stack painting (0xAA) + a high-water-mark scan every 64 main
# loop iterations, logged over UART0. See M6_USB_STORAGE.md §7a.
stack-probe = []

[dependencies]
tiliqua-hal = { path="../../../rs/hal", default-features = false }
tiliqua-lib = { path = "../../../rs/lib" }
opts = { path = "../../../rs/opts" }
tiliqua-pac = { path="../pac", default-features = false, features = ["critical-section", "vexriscv"] }

log = "0.4.17"
embedded-hal = "=1.0.0"
riscv = { version = "=0.11.1", features = ["critical-section-single-hart"] }
riscv-rt = { version = "=0.12.2", features = ["single-hart"] }
panic-halt = "0.2.0"
micromath = "2.1.0"
fastrand = { version = "2.1.0", default-features = false }
heapless = "0.8.0"
strum_macros = "0.26.4"
strum = {version = "0.25.0", features = ["derive"], default-features=false}
colorsys = { version = "*", default-features = false }
critical-section = "1.2.0"
amaranth-soc-isr = { path="../../../rs/isr", default-features = false }
irq = "0.2.3"
serde = { version="1.0.219", default-features=false }
serde_derive = "1.0.219"
midi-types = "0.1.7"
midi-convert = "0.2.0"
fatfs = { git = "https://github.com/rafalh/rust-fatfs", default-features = false }

# Cross-compiles the vendored MBSID C++ engine into libmbsid.a (Task 4).
[build-dependencies]
cc = "1.0"

# Host-test scaffold (cargo test --target x86_64-unknown-linux-gnu --lib):
# regdiff + mbsid_sys live in the lib crate; main.rs is the riscv32 firmware.
[lib]
name = "tiliqua_fw"
path = "src/lib.rs"

[dev-dependencies]
# Host tests only: provides the critical-section implementation the uptime
# counter needs on x86 (the riscv crate's impl is riscv-gated).
critical-section = { version = "1.2.0", features = ["std"] }

[profile.release]
codegen-units = 1
debug = true
debug-assertions = false
incremental = false
lto = true
opt-level = 2
overflow-checks = false
