[package]
name = "tiliqua-fw"
version = "0.1.0"
edition = "2021"

[dependencies]
tiliqua-hal = { path="../../../rs/hal", default-features = false }
tiliqua-lib = { path = "../../../rs/lib" }
opts = { path = "../../../rs/opts" }
tiliqua-pac = { path="../pac", default-features = false, features = ["critical-section", "vexriscv"] }

# release_max_level_info: compile debug!/trace! to nothing in release builds —
# mos6502 emits a debug! per emulated instruction, and even runtime-filtered it
# costs a max_level() load+branch in the hottest loop in the system (§2b of
# docs/sid_player_sw_perf_review.md).
log = { version = "0.4.17", features = ["release_max_level_info"] }
embedded-hal = "=1.0.0"
riscv = { version = "=0.11.1", features = ["critical-section-single-hart"] }
riscv-rt = { version = "=0.12.2", features = ["single-hart"] }
panic-halt = "0.2.0"
micromath = "2.1.0"
fastrand = { version = "2.1.0", default-features = false }
heapless = "0.8.0"
strum_macros = "0.26.4"
strum = {version = "0.25.0", features = ["derive"], default-features=false}
colorsys = { version = "*", default-features = false }
critical-section = "1.2.0"
amaranth-soc-isr = { path="../../../rs/isr", default-features = false }
irq = "0.2.3"
fatfs = { git = "https://github.com/rafalh/rust-fatfs", default-features = false }
mos6502 = { version = "0.9", default-features = false }
[profile.release]
codegen-units = 1
debug = true
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
